--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,16 @@
       rel="stylesheet"
     />
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="/__/firebase/8.2.2/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="/__/firebase/8.2.2/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+
     <title>Black Dashboard PRO React</title>
   </head>
   <body class="sidebar-mini">
